--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,7 +6,11 @@ buildscript {
         targetSdkVersion = 34
         ndkVersion = "26.1.10909125"
         kotlinVersion = "1.9.22"
+
+          useExoplayerIMA = System.getenv("RNV_SAMPLE_ENABLE_ADS") ?: true
+          useExoplayerRtsp = true
     }
+
     repositories {
         google()
         mavenCentral()
