--- a/ios/radarAppTechnicalTest/Info.plist
+++ b/ios/radarAppTechnicalTest/Info.plist
@@ -32,6 +32,11 @@
 		<key>NSAllowsLocalNetworking</key>
 		<true/>
 	</dict>
+	<key>NSCameraUsageDescription</key>
+    <string>Please allow use of camera</string>
+    <!-- If you intend to use the microphone -->
+    <key>NSMicrophoneUsageDescription</key>
+    <string>Please allow use of microphone</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
 	<key>UILaunchStoryboardName</key>
